--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -12,6 +12,9 @@
 	</head>
 	<body>
         <h1>About Me</h1>
+        <a href="/">Home</a>
+        <a href="/about/">About</a>
+
         <h2>... and my new Astro site!</h2>
       
         <p>I am working through Astro's introductory tutorial. This is the second page on my website, and it's the first one I built myself!</p>
