--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -14,6 +14,7 @@
         <h1>About Me</h1>
         <a href="/">Home</a>
         <a href="/about/">About</a>
+        <a href="/blog">Blog</a>
 
         <h2>... and my new Astro site!</h2>
       
