--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,8 @@
 ---
+import Navigation from "../components/Navigation.astro";
+import Footer from "../components/Footer.astro";
 import "../styles/global.css";
+import Header from "../components/Header.astro";
 
 const pageTitle = "My Astro Learning Blog";
 ---
@@ -13,9 +16,7 @@ const pageTitle = "My Astro Learning Blog";
     <title>{pageTitle}</title>
   </head>
   <body>
-    <a href="/">Home</a>
-    <a href="/about/">About</a>
-    <a href="/blog">Blog</a>
+    <Header />
 
     <h1>{pageTitle}</h1>
     <p>
@@ -28,5 +29,9 @@ const pageTitle = "My Astro Learning Blog";
       <li><a href="/posts/post-2">Post 2</a></li>
       <li><a href="/posts/post-3">Post 3</a></li>
     </ul>
+    <Footer />
+    <script>
+      import "../scripts/menu";
+    </script>
   </body>
 </html>
