--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,7 +1,10 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
-import "../styles/global.css";
+import BlogPost from "../components/BlogPost.astro";
 
+const allPosts = Object.values(
+  import.meta.glob("./posts/*.md", { eager: true }),
+);
 const pageTitle = "My Astro Learning Blog";
 ---
 
@@ -12,8 +15,10 @@ const pageTitle = "My Astro Learning Blog";
     enim cumque illo quas voluptas? Magni labore reiciendis tempora.
   </p>
   <ul>
-    <li><a href="/posts/post-1/">Post 1</a></li>
-    <li><a href="/posts/post-2">Post 2</a></li>
-    <li><a href="/posts/post-3">Post 3</a></li>
+    {
+      allPosts.map((post: any) => (
+        <BlogPost url={post.url} title={post.frontmatter.title} />
+      ))
+    }
   </ul>
 </BaseLayout>
